--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rpg-sage-creative/language-utils",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "Describe this repo.",
 	"license": "LGPL-3.0-or-later",
 	"main": "build/index.js",
@@ -26,6 +26,5 @@
 		"@rsc-utils/dev-scripts": "github:rpg-sage-creative/dev-scripts#semver:^1.2.0",
 		"@rsc-utils/template-literal-utils": "github:rpg-sage-creative/template-literal-utils#semver:^1.1.1"
 	},
-	"dependencies": {
-	}
+	"dependencies": {}
 }
